# low_latency_trading_system

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ULTRA_LOW_LATENCY_TRADING_SYSTEM_SPEC.md
.github/workflows/: ci.yml  hugo.yml
config/: system_config.json
data/: sample_market_data.csv
docs/: architecture.md  benchmarks.md  performance_tuning.md
include/common/: config.hpp  logger.hpp  types.hpp  utils.hpp
include/containers/: circular_buffer.hpp  lock_free_queue.hpp  memory_pool.hpp
include/execution/: exchange_simulator.hpp  execution_engine.hpp  order_router.hpp
include/market_data/: feed_simulator.hpp  fix_parser.hpp  market_data_handler.hpp
include/monitoring/: histogram.hpp  latency_tracker.hpp  metrics_collector.hpp
include/order_book/: order.hpp  order_book.hpp  price_level.hpp
include/risk/: position_tracker.hpp  risk_manager.hpp
include/strategy/: market_maker.hpp  momentum.hpp  pairs_trading.hpp  strategy_interface.hpp
src/: config.cpp  exchange_simulator.cpp  execution_engine.cpp  feed_simulator.cpp  fix_parser.cpp  latency_tracker.cpp  logger.cpp  main.cpp  market_data_handler.cpp  market_maker.cpp  metrics_collector.cpp  momentum.cpp  order_book.cpp  order_router.cpp  pairs_trading.cpp  position_tracker.cpp  risk_manager.cpp
tests/benchmarks/: bench_end_to_end.cpp  bench_execution.cpp  bench_fix_parser.cpp  bench_lock_free_queue.cpp  bench_market_data_handler.cpp  bench_memory_pool.cpp  bench_order_book.cpp  bench_risk_manager.cpp  bench_strategies.cpp  bench_throughput.cpp
tests/integration/: test_end_to_end.cpp  test_threading.cpp
tests/unit/: test_circular_buffer.cpp  test_exchange_simulator.cpp  test_execution_engine.cpp  test_feed_simulator.cpp  test_fix_parser.cpp  test_lock_free_queue.cpp  test_market_data_handler.cpp  test_market_maker.cpp  test_memory_pool.cpp  test_momentum.cpp  test_order_book.cpp  test_order_router.cpp  test_pairs_trading.cpp  test_position_tracker.cpp  test_risk_manager.cpp  test_types.cpp
website/: config.toml
website/content/: _index.md  architecture.md  deep-dive.md  performance.md
website/themes/papermod/layouts/: index.html
website/themes/papermod/layouts/_default/: baseof.html  list.html  single.html
website/themes/papermod/layouts/partials/: footer.html  head.html  header.html
website/themes/papermod/static/css/: style.css
website/themes/papermod/static/js/: main.js
